# cplotlib

./: CMakeLists.txt  Config.cmake.in  README.md
src/: plot.cpp
